# maralorn-config

./: .gitignore  .gitmodules  .hlint.yaml  CHANGELOG.md  Mail.hs  Main.hs  Makefile  README.md  channels.nix  ci.nix  default.nix  flake-module.nix  flake.nix  fourmolu.yaml  haskell-dialog.cabal  home.nix  hosts  iso.nix  keyboard-layout.json  logfeed.cabal  menu.json  menu.yaml  nixpkgs-bot.cabal  overlays.nix  private.nix  result  result-home-manager-apollo  result-home-manager-hephaistos  result-home-manager-hera  result-system-apollo  result-system-hera  result-themes  shell.nix  test.nix  wizards-dialog.cabal
.helix/: languages.toml
cachix/: all-hies.nix  cachix.nix  mweinelt.nix  nixfmt.nix  pre-commit-hooks.nix  srid.nix
common/: common.nix  default.nix  essentials.nix  lib.nix  pkgs.nix  tailscale.nix  test-lib.nix  wireguard.nix
exe/: Main.hs
graphql/: merge_pr_info.graphql  pr_info.graphql
home/: accounting.nix  battery.nix  chat.nix  default.nix  firefox.nix  games.nix  git-sign.nix  headless-mpd.nix  kassandra-server.nix  laptop.nix  latex.nix  mail-client.nix  mail.nix  (+12 more)
home-common/: default.nix  my-systems.nix  taskwarrior.nix
home-manager/: Makefile  accounting.nix  battery.nix  default.nix  flake-module.nix  flake-parts.nix  games.nix  habitask.nix  headless.nix  home-options.nix  laptop.nix  latex.nix  lib.nix  machines.nix  modes.nix  morgenreport.nix  mpd.nix  on-foreign-machine.nix  on-my-machine.nix  pythia.nix  research.nix  sort-mail.nix  startpage.html  target.nix  taskwarrior.nix  tests.nix  update-script.nix  update_tasks.nix
(+939 files in other folders)
